@@ -2,19 +2,18 @@ import java.awt.*;
 import java.util.ArrayList;
 import java.util.Random;
 
-public class Model {
+public class Model implements Observable {
     ArrayList<Vehicle> cars = new ArrayList<>();
     RepairShop<Volvo240> workshop = new RepairShop<>(10);
     Random rand = new Random();
-    public Model(){
+    private ArrayList<Observer> observers = new ArrayList<>();
+    public Model(CarView frame){
         Volvo240 volvo = new Volvo240();
         volvo.setPosition(new Point(0,0));
         cars.add(volvo);
         workshop.setPosition(new Point(300, 0));
-    }
-    public Model(Model model) {
-        this.cars = model.cars;
-        this.workshop = model.workshop;
+        observers.add(frame);
+
     }
     public void addCar(){
         if(cars.size() < 10) {
@@ -28,12 +27,12 @@ public class Model {
     }
     public Vehicle removeCar(){
         if(!cars.isEmpty()){
-            return cars.remove(0);
+            return cars.removeFirst();
         }
         return null;
     }
 
-    public Model update() {
+    public void update() {
         ArrayList<Vehicle> carsCopy = new ArrayList<>(cars);
         for (Vehicle car : carsCopy) {
             car.move();
@@ -50,7 +49,7 @@ public class Model {
                 cars.remove(car);
             }
         }
-        return new Model(this);
+        notifyObservers();
 
     }
     private boolean outOfBounds(int x, int y){
@@ -60,5 +59,22 @@ public class Model {
         int wx = workshop.getPosition().x;
         int wy = workshop.getPosition().y;
         return (x <= wx + 40 && x >= wx - 40 && y <= wy + 40 && y >= wy - 40);
+    }
+
+    @Override
+    public void addObserver(Observer o) {
+        observers.add(o);
+    }
+
+    @Override
+    public void removeObserver(Observer o) {
+        observers.remove(o);
+    }
+
+    @Override
+    public void notifyObservers() {
+        for(Observer o : observers){
+            o.updateViewToModel(this);
+        }
     }
 }
